# bugtracker

./: README.md  db.sqlite3  pyproject.toml
bugtracker_app/: admin.py  forms.py  models.py  views.py
bugtracker_app/migrations/: 0001_initial.py  0002_auto_20200826_1848.py  0003_auto_20200826_1859.py  0004_auto_20200826_2337.py  0005_auto_20200827_0132.py
bugtracker_proj/: settings.py  urls.py
customuser_app/: admin.py  models.py
customuser_app/migrations/: 0001_initial.py  0002_ticketmodel.py  0003_delete_ticketmodel.py
templates/: add_ticket.html  base.html  index.html  login.html  ticket_detail.html  user_ticket_list.html
