[tool.poetry]
name = "bugtracker"
version = "0.1.0"
description = "A web-based bugtracker app built with django"
authors = ["Kevin Blount <kvbchamp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
